--- a/form/register.html
+++ b/form/register.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="register-style.css">
     <title>登録フォーム</title>
 </head>
+
 <body>
-    
-    
+    <p>必須項目を入力の上、送信ボタンを押してください。</p>
+    <form action="#" method="post">
+
+        <table>
+            <tr>
+                <td class="koumoku">Id
+                    <span class="hissu">必須</span>
+                    <span>(メールアドレス)</span>
+                </td>
+                <td class="kinyu">
+                    <input type="email" name="email" size="30" placeholder="例:hamutatosan@morijyobi.ac.jp" required>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">パスワード
+                    <span class="hissu">必須</span>
+                    <span>(半角英数字8文字以上)</span>
+                </td>
+                <td class="kinyu">
+                    <input type="password" name="password" size="30" minlength="8" required>
+                    <label><input type="checkbox" name="eturan"><span>パスワードを表示する。</span></label>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">氏名
+                    <span class="hissu">必須</span>
+                </td>
+                <td class="kinyu">姓:<input type="text" name="last_name" placeholder="例:田中" required>
+                    名:<input type="text" name="first_name" 例:太郎 required></td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">住所</td>
+                <td class="kinyu">
+                    <label>〒<input type="text" name="adress" placeholder="020-0021" size="8" readonly></label><br>
+                    <input type="text" name="adress" placeholder="岩手県盛岡市中央通3丁目" readonly><br>
+                    <input type="text" name="adress" placeholder="番地"><br>
+                    <input type="text" name="adress" placeholder="建物名" size="30">
+                </td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">携帯電話番号
+                    <span class="hissu">必須</span>
+                    <span>(ハイフンなし)</span>
+                </td>
+                <td class="kinyu"><input type="tel" name="tel" required></td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">学科・学年
+                    <span class="hissu">必須</span>
+                </td>
+                <td class="kinyu">
+                    <label>学科：
+                        <select name="gakka" required>
+                            <option value="">学科を選択してください</option>
+                            <option value="sys">システム系学科</option>
+                            <option value="B">ビジネス系学科</option>
+                            <option value="design">デザイン系学科</option>
+                        </select>
+                    </label>
+                    <label>学年：
+                        <select name="gakunen" required>
+                            <option value="">学年を選択してください</option>
+                            <option value="1">1年</option>
+                            <option value="2">2年</option>
+                            <option value="3">3年</option>
+                            <option value="4">4年</option>
+                        </select>
+                    </label>
+
+                </td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">お得な情報・クーポン
+                    <span class="hissu">必須</span>
+                </td>
+                <td class="kinyu">
+                    <label><input type="radio" name="ku-pon" value="y" required>受け取る</label>
+                    <label><input type="radio" name="ku-pon" value="n">受け取らない</label></td>
+            </tr>
+
+            <tr>
+                <td class="koumoku">ご意見・ご要望<span>(200字以内でご記入ください)</span></td>
+                <td class="kinyu"><textarea name="ultiple" cols="50" rows="10" maxlength="200">なし</textarea></td>
+            </tr>
+
+
+
+        </table>
+
+
+
+        <button type="reset">入力内容をクリアする</button>
+        <button type="submid">送信</button>
+
+
+
+    </form>
+
+
 </body>
+
 </html>
