フォーム課題2の再提出

--- a/form/register.html
+++ b/form/register.html
@@ -38,16 +38,16 @@
                     <span class="hissu">必須</span>
                 </td>
                 <td class="kinyu">姓:<input type="text" name="last_name" placeholder="例:田中" required>
-                    名:<input type="text" name="first_name" 例:太郎 required></td>
+                    名:<input type="text" name="first_name" placeholder=例:太郎 required></td>
             </tr>
 
             <tr>
                 <td class="koumoku">住所</td>
                 <td class="kinyu">
-                    <label>〒<input type="text" name="adress" placeholder="020-0021" size="8" readonly></label><br>
-                    <input type="text" name="adress" placeholder="岩手県盛岡市中央通3丁目" readonly><br>
-                    <input type="text" name="adress" placeholder="番地"><br>
-                    <input type="text" name="adress" placeholder="建物名" size="30">
+                    <label>〒<input type="text" name="adress0" placeholder="020-0021" size="8" readonly></label><br>
+                    <input type="text" name="adress1" placeholder="岩手県盛岡市中央通3丁目" readonly><br>
+                    <input type="text" name="adress2" placeholder="番地"><br>
+                    <input type="text" name="adress3" placeholder="建物名" size="30">
                 </td>
             </tr>
 
@@ -106,7 +106,7 @@
 
 
         <button type="reset">入力内容をクリアする</button>
-        <button type="submid">送信</button>
+        <button type="submit">送信</button>
 
 
 
