--- a/box/box-layout.html
+++ b/box/box-layout.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>my recommendation</h1>
+    <h1>My recommendation</h1>
 
     <div class="box">
         <div class="item">
@@ -57,7 +57,7 @@
             </p>
         </div>
 
-        <div class="item" id="5">
+        <div class="item">
             <h2>暁records</h2>
             <div class="siz">
                 <img src="/img/rss8jacket1500x1500.jpg" alt="akatuki">
@@ -69,7 +69,7 @@
             </p>
         </div>
 
-        <div class="item" id="6">
+        <div class="item">
             <h2>豚乙女</h2>
             <div class="siz">
                 <img src="/img/disco_suzu_no_sorane.jpg" alt="neko">
