altの内容をわかりやすい物に変えました。

--- a/box/box-layout.html
+++ b/box/box-layout.html
@@ -15,7 +15,7 @@
         <div class="item">
             <h2>上海アリス幻樂団</h2>
             <div class="siz">
-                <img src="img/hplogo.png" alt="">
+                <img src="img/hplogo.png" alt="上海アリス幻樂団">
             </div>
             <a href="https://www6.big.or.jp/~zun/" alt="原作" target="_blank">公式HPへ</a>
             <p>主に弾幕STGや音楽を作成したりしているサークル。<br>
@@ -38,7 +38,7 @@
         <div class="item">
             <h2>GET IN THE RING</h2>
             <div class="siz">
-                <img src="/img/getinthering.jpg" alt="get_in">
+                <img src="/img/getinthering.jpg" alt="get_in_the_ring">
             </div>
             <a href="https://x.com/GET_IN_OFFICIAL" target="_blank">Twittrへ</a>
             <p>孤高の同人音楽サークル。<br>
@@ -49,7 +49,7 @@
         <div class="item">
             <h2>SOUND HOLIC</h2>
             <div class="siz">
-                <img src="/img/sanhori.png" alt="sh">
+                <img src="/img/sanhori.png" alt="sound_holic">
             </div>
             <a href="https://www.youtube.com/@soundholic" target="_blank">youtubeへ</a>
             <p>映像音楽制作チーム。<br>
@@ -60,7 +60,7 @@
         <div class="item">
             <h2>暁records</h2>
             <div class="siz">
-                <img src="/img/rss8jacket1500x1500.jpg" alt="akatuki">
+                <img src="/img/rss8jacket1500x1500.jpg" alt="akatuki_records">
             </div>
             <a href="https://youtube.com/@akatsuki-records?si=vtyFUzi-FUaDjrQ0" target="_blank">youtubeへ</a>
             <p>パワフルな歌声とシャウトが特徴的。<br>
@@ -72,7 +72,7 @@
         <div class="item">
             <h2>豚乙女</h2>
             <div class="siz">
-                <img src="/img/disco_suzu_no_sorane.jpg" alt="neko">
+                <img src="/img/disco_suzu_no_sorane.jpg" alt="butaotome">
             </div>
             <a href="https://youtube.com/@butaotome_official?si=RG3_90eXvjF9_uvB" target="_blank">youtubeへ</a>
             <p>イラストレーター兼デザイナーが在籍する音楽ユニット。<br>
